--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "JSONStream": "^1.1.2",
     "command-line-args": "^3.0.0",
     "command-line-usage": "^3.0.1",
+    "jsonpath-plus": "^0.16.0",
     "object-path": "^0.11.4",
     "pg": "^6.0.0",
     "pg-format": "^1.0.2",
