--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,35 +9,36 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}\\lib\\pji.js",
+            // studios
             // "args": [
             //     "--file", "all.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-            //     "-t" ,"teststudios",
+            //     "-t" ,"studios",
             //     "-k","studioKey",
             //     "-n","studios",
             //     "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image"
             //     ]
             // users
-            "args": [
-                "--file", "all.json",
-                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                "-t" ,"testusers",
-                "-k","userKey",
-                "-n","users",
-                "-F","userKey,phone,email,name,avatar"
-                ]
-            // studioUser
             // "args": [
             //     "--file", "all.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-            //     "-t" ,"tstudioUsers",
-            //     "-k","studioKey",
-            //     "-n","studios",
-            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
-            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
-            //     "-s","userKey",
-            //     "-r","users"
+            //     "-t" ,"users",
+            //     "-k","userKey",
+            //     "-n","users",
+            //     "-F","userKey,phone,email,name,avatar"
             //     ]
+            // studioUser
+            "args": [
+                "--file", "all.json",
+                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                "-t" ,"studioUsers",
+                "-k","studioKey",
+                "-n","studios",
+                "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
+                "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
+                "-s","userKey",
+                "-r","users"
+                ]
         }
     ]
 }
