--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}\\lib\\pji.js",
             // studios
             // "args": [
-            //     "--file", "all.json",
+            //     "--file", "studios.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
             //     "-t" ,"studios",
             //     "-k","studioKey",
@@ -19,26 +19,26 @@
             //     "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image"
             //     ]
             // users
-            // "args": [
-            //     "--file", "all.json",
-            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-            //     "-t" ,"users",
-            //     "-k","userKey",
-            //     "-n","users",
-            //     "-F","userKey,phone,email,name,avatar"
-            //     ]
-            // studioUser
             "args": [
-                "--file", "all.json",
+                "--file", "users.json",
                 "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                "-t" ,"studioUsers",
-                "-k","studioKey",
-                "-n","studios",
-                "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
-                "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
-                "-s","userKey",
-                "-r","users"
+                "-t" ,"users",
+                "-k","userKey",
+                "-n","users",
+                "-F","userKey,phone,email,name,avatar"
                 ]
+            // studioUser
+            // "args": [
+            //     "--file", "studios.json",
+            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+            //     "-t" ,"studioUsers",
+            //     "-k","studioKey",
+            //     "-n","studios",
+            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
+            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
+            //     "-s","userKey",
+            //     "-r","users"
+            //     ]
         }
     ]
 }
