--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,15 +48,15 @@
             //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
             //     "-s","userKey",
             //     "-r","users"
-            //     ],
+            //     ]
             // "args": [
             //     "--file", "photos.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
             //     "-t" ,"photos",
             //     "-k","photoKey",
             //     "-n","photos",
-            //     "-F","photoKey,title,status,media,timestamp,studio,user,createdAt",
-            //     "-d","photoKey,title,status,media,timestamp,studioKey,userKey,createdAt"
+            //     "-F","photoKey,title,status,media,timestamp,studio,user,updatedAt",
+            //     "-d","photoKey,title,status,media,timestamp,studioKey,userKey,updatedAt"
             //     ]
 
                 // "args": [
@@ -65,8 +65,8 @@
                 //     "-t" ,"videos",
                 //     "-k","videoKey",
                 //     "-n","videos",
-                //     "-F","videoKey,title,status,media,timestamp,assembly_id,old_media,class,studio,user,createdAt",
-                //     "-d","videoKey,title,status,media,timestamp,assemblyId,oldMedia,classKey,studioKey,userKey,createdAt"
+                //     "-F","videoKey,title,status,media,timestamp,assembly_id,old_media,class,studio,user,updatedAt",
+                //     "-d","videoKey,title,status,media,timestamp,assemblyId,oldMedia,classKey,studioKey,userKey,updatedAt"
                 //     ]
 
                     // "args": [
@@ -75,19 +75,19 @@
                     //     "-t" ,"audios",
                     //     "-k","audioKey",
                     //     "-n","audios",
-                    //     "-F","audioKey,title,artist,media,timestamp,format,studio,user,createdAt",
-                    //     "-d","audioKey,title,artist,media,timestamp,format,studioKey,userKey,createdAt"
+                    //     "-F","audioKey,title,artist,media,timestamp,format,class,studio,user,updatedAt",
+                    //     "-d","audioKey,title,artist,media,timestamp,format,classKey,studioKey,userKey,updatedAt"
                     //     ]
 
-                    // "args": [
-                    //     "--file", "posts.json",
-                    //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                    //     "-t" ,"posts",
-                    //     "-k","postKey",
-                    //     "-n","posts",
-                    //     "-F","postKey,title,status,media,applauseCount,commentCount,ref,type,studio,user,created_at,updated_at",
-                    //     "-d","postKey,title,status,media,applauseCount,commentCount,ref,type,studioKey,userKey,createdAt,updatedAt"
-                    //     ]
+                    "args": [
+                        "--file", "posts.json",
+                        "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                        "-t" ,"posts",
+                        "-k","postKey",
+                        "-n","posts",
+                        "-F","postKey,title,status,media,applauseCount,commentCount,ref,type,studio,user,created_at,updated_at",
+                        "-d","postKey,title,status,media,applauseCount,commentCount,ref,type,studioKey,userKey,createdAt,updatedAt"
+                        ]
 
                         // "args": [
                         //     "--file", "posts.json",
@@ -95,23 +95,23 @@
                         //     "-t" ,"postcomments",
                         //     "-k","postKey",
                         //     "-n","posts",
-                        //     "-F","postKey,timestamp,comment,user,createdAt",
-                        //     "-d","postKey,timestamp,comment,userKey,createdAt",
+                        //     "-F","postKey,timestamp,comment,user,updatedAt",
+                        //     "-d","postKey,timestamp,comment,userKey,updatedAt",
                         //     "-s","postKey",
                         //     "-r","comments"
                         //     ]
 
-                        "args": [
-                            "--file", "posts.json",
-                            "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                            "-t" ,"postapplauses",
-                            "-k","postKey",
-                            "-n","posts",
-                            "-F","postKey,timestamp,user,createdAt",
-                            "-d","postKey,timestamp,userKey,createdAt",
-                            "-s","postKey",
-                            "-r","applauses"
-                            ]
+                        // "args": [
+                        //     "--file", "posts.json",
+                        //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                        //     "-t" ,"postapplauses",
+                        //     "-k","postKey",
+                        //     "-n","posts",
+                        //     "-F","postKey,timestamp,user,updatedAt",
+                        //     "-d","postKey,timestamp,userKey,updatedAt",
+                        //     "-s","postKey",
+                        //     "-r","applauses"
+                        //     ]
 
                        
           
