- change data migration to insert studio owner or null for non existsing user key in studiousers table and insert null for user key for other table (photos , audios , videso .....etc) - rename table studioUsers - insert null for non existsing studio key at any table

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,17 +38,17 @@
             //     "-F","userKey,phone,email,name,avatar"
             //     ]
             // studioUser
-            // "args": [
-            //     "--file", "studios.json",
-            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-            //     "-t" ,"studioUsers",
-            //     "-k","studioKey",
-            //     "-n","studios",
-            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
-            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
-            //     "-s","userKey",
-            //     "-r","users"
-            //     ]
+            "args": [
+                "--file", "studios.json",
+                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                "-t" ,"studiousers",
+                "-k","studioKey",
+                "-n","studios",
+                "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
+                "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
+                "-s","userKey",
+                "-r","users"
+                ]
             // "args": [
             //     "--file", "photos.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
@@ -79,15 +79,15 @@
                     //     "-d","audioKey,title,artist,media,timestamp,format,classKey,studioKey,userKey,updatedAt"
                     //     ]
 
-                    "args": [
-                        "--file", "posts.json",
-                        "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                        "-t" ,"posts",
-                        "-k","postKey",
-                        "-n","posts",
-                        "-F","postKey,title,status,media,applauseCount,commentCount,ref,type,studio,user,created_at,updated_at",
-                        "-d","postKey,title,status,media,applauseCount,commentCount,ref,type,studioKey,userKey,createdAt,updatedAt"
-                        ]
+                    // "args": [
+                    //     "--file", "posts.json",
+                    //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                    //     "-t" ,"posts",
+                    //     "-k","postKey",
+                    //     "-n","posts",
+                    //     "-F","postKey,title,status,media,applauseCount,commentCount,ref,type,studio,user,created_at,updated_at",
+                    //     "-d","postKey,title,status,media,applauseCount,commentCount,ref,type,studioKey,userKey,createdAt,updatedAt"
+                    //     ]
 
                         // "args": [
                         //     "--file", "posts.json",
