fixing createdat of studios

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,15 +10,15 @@
             "name": "Launch Program",
             "program": "${workspaceFolder}\\lib\\pji.js",
             // studios
-            // "args": [
-            //     "--file", "studios.json",
-            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-            //     "-t" ,"studios",
-            //     "-k","studioKey",
-            //     "-n","studios",
-            //     "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,generalMessaging",
-            //     "-d","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,general_messaging"
-            //     ]
+            "args": [
+                "--file", "studios.json",
+                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                "-t" ,"studios",
+                "-k","studioKey",
+                "-n","studios",
+                "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,generalMessaging,created",
+                "-d","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,general_messaging,createdAt"
+                ]
             //  "args": [
             //     "--file", "studios.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
@@ -38,17 +38,17 @@
             //     "-F","userKey,phone,email,name,avatar"
             //     ]
             // studioUser
-            "args": [
-                "--file", "studios.json",
-                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                "-t" ,"studiousers",
-                "-k","studioKey",
-                "-n","studios",
-                "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
-                "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
-                "-s","userKey",
-                "-r","users"
-                ]
+            // "args": [
+            //     "--file", "studios.json",
+            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+            //     "-t" ,"studiousers",
+            //     "-k","studioKey",
+            //     "-n","studios",
+            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
+            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
+            //     "-s","userKey",
+            //     "-r","users"
+            //     ]
             // "args": [
             //     "--file", "photos.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
