--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,15 +10,15 @@
             "name": "Launch Program",
             "program": "${workspaceFolder}\\lib\\pji.js",
             // studios
-            "args": [
-                "--file", "studios.json",
-                "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
-                "-t" ,"studios",
-                "-k","studioKey",
-                "-n","studios",
-                "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,generalMessaging,created",
-                "-d","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,general_messaging,createdAt"
-                ]
+            // "args": [
+            //     "--file", "studios.json",
+            //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+            //     "-t" ,"studios",
+            //     "-k","studioKey",
+            //     "-n","studios",
+            //     "-F","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,generalMessaging,created",
+            //     "-d","studioKey,logo,color,name,location,shortCode,unprocessed_invites,background_image,general_messaging,createdAt"
+            //     ]
             //  "args": [
             //     "--file", "studios.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
@@ -44,11 +44,11 @@
             //     "-t" ,"studiousers",
             //     "-k","studioKey",
             //     "-n","studios",
-            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey",   
-            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey",   
+            //     "-F","role,streamToken,streamName,timestamp,invited_by,approved_by,classCount,unread_message_count,unread_feed_count,userKey,studioKey,updatedAt",   
+            //     "-d","role,streamToken,streamName,timestamp,invitedBy,approvedBy,classCount,unreadMessageCount,unreadFeedCount,userKey,studioKey,updatedAt",   
             //     "-s","userKey",
             //     "-r","users"
-            //     ]
+            //      ]
             // "args": [
             //     "--file", "photos.json",
             //     "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
@@ -113,6 +113,15 @@
                         //     "-r","applauses"
                         //     ]
 
+                        "args": [
+                            "--file", "events.json",
+                            "-c", "postgresql://postgres:123456@localhost:5432/iRehearse",
+                            "-t" ,"events",
+                            "-k","eventKey",
+                            "-n","studios",
+                            "-F","eventKey,title,startDate,startTime,media,endDate,endTime,description,user,studio,post",   
+                            "-d","eventKey,title,startDateTime,media,endDateTime,description,userKey,studioKey,postKey"  
+                            ]
                        
           
 
