--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "command-line-args": "^3.0.0",
     "command-line-usage": "^3.0.1",
     "jsonpath-plus": "^0.16.0",
+    "moment": "^2.22.2",
     "object-path": "^0.11.4",
     "pg": "^6.0.0",
     "pg-format": "^1.0.2",
